Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  Some future release (Zope X3 3.1.0)

    New features

      - Added new API method `getAdapters(objects, provided)` to `zapi`. It
        will return all available adapters for this configuration. Note that
        every name will be only returned once.

      - When parsing a DSN, allow the host to be specified without a port.

      - Removed Browser Menu Service and implemented menus as subscriber
        adapters. Menu Item Types (in other words, menus) are now utilities
        that provide `IMenuItemType`. 

        + Completes http://dev.zope.org/Zope3/AdaptersForMenuItems. New
          features such as sub-menus, icons, disabled entries and so on were
          not well defined and should be reconsidered in a different proposal.

        + Backward-compatibility of the existing `browser` directives was
          ensured. 

        + If you have a directive that accepts a menu as attribute, it now
          needs to be a `MenuField`, so that it is correctly resolved to a menu
          interface.

        + The `browser:menu` directive has now an optional `interface`
          attribute that allows you to specify a particular menu interface
          instead of having the machinery create one for you.

        + The two API methods `getMenu()` and `getFirstItemOfMenu()` of the
          Browser Menu Service are now available as functions in 
          `zope.app.publisher.browser.menu` having identical semantics.

        + Added `order` attribute to the menu item that declares the item's
          relative position. In general the menu items are always sorted from
          most to least specific, which is determined by the order of the
          implemented interfaces of the object. If ambiguities still exists,